--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "extract-sourcemap-code",
   "version": "1.0.0",
-  "description": "A small NodeJS utility to extract code from a source map and attempts to re-create the structure.",
-  "main": "index.js",
+  "description": "A small NodeJS tool to extract code from a source map and re-create the structure.",
+  "main": "extract.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
